# light-rag

./: .env.example  .env.railway  .gitignore  DOCKER.md  Dockerfile  Dockerfile.dev  README.md  coding_guideline.md  deploy  deployment.yml  docker-compose.yml  implement_guideline.md  main.py  project_structure.md  pyproject.toml
backend/: app.py
backend/agents/: adaptive_context_analyzer.py  answer_synthesis.py  chunking.py  (+6 more)
deployment/: Dockerfile  Dockerfile.postgres  deploy.py  docker-compose.dev.yml  docker-compose.yml  docker-dev.sh  docker-prod.sh  railway-deploy.sh  railway-migrations.py
devlog/: 20250715_1400_embedding_generation_devlog.md  20250715_1625_devlog.md  20250715_2100_chunking_agent_implementation.md  20250715_2200_entity_extraction_agent_implementation.md  20250715_2345_relationship_extraction_agent_implementation.md
docs/: system-design.md
migrations/: 001_create_tables.sql  002_fix_entity_schema.sql  003_create_users_table.sql  004_create_projects_table.sql  005_create_pipeline_table.sql  006_add_fulltext_search.sql  007_add_query_system.sql
scripts/: debug_firebase_user.py  debug_signin_response.py  fresh_upload_with_semantic_chunking.py  run_migrations.py  setup_db.py  test_adaptive_context.py  test_conversation_context.py  test_document_upload.py  test_email_verification.py  test_forms.py  test_freshness_scoring.py  test_frontend.py  test_logout.py  test_pipeline_flow.py  test_project_management.py  test_query_system.py  test_semantic_chunking.py  test_semantic_query.py  test_signup.py  test_signup_api.py  test_verification_flow.py
(+58 files in other folders)
