[project]
name = "light-rag"
version = "0.1.0"
description = "A demonstration RAG system using PydanticAI, PostgreSQL, and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-ai>=0.4.2",
    "logfire[asyncpg,fastapi]>=0.50.0",
    "asyncpg>=0.29.0",
    "markitdown[pdf]>=0.0.1a4",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "chonkie>=0.1.0",
    "orjson>=3.10.0",
    "google-generativeai>=0.8.5",
    "pydantic[email]>=2.11.7",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]
